# advent-of-code

./: .gitignore  Cargo.toml
01/: Cargo.toml
01/benches/: bench.rs
01/src/: lib.rs  main.rs
02/: Cargo.toml
02/src/: main.rs
03/: Cargo.toml
03/src/: main.rs
04/: Cargo.toml
04/src/: main.rs
project_generator/: Cargo.toml
project_generator/src/: main.rs
project_generator/templates/: Cargo.toml.template  bench.rs.template  lib.rs.template  main.rs.template
src/: lib.rs
src/day_01/: bench.rs  bin.rs  mod.rs
src/day_02/: bench.rs  bin.rs  mod.rs
src/day_03/: bench.rs  bin.rs  mod.rs
src/day_04/: bench.rs  bin.rs  mod.rs
src/day_05/: bench.rs  bin.rs  mod.rs
src/day_06/: bench.rs  bin.rs  mod.rs
src/day_07/: bench.rs  bin.rs  mod.rs
src/day_08/: bench.rs  bin.rs  mod.rs
src/day_09/: bench.rs  bin.rs  mod.rs
src/day_10/: bench.rs  bin.rs  mod.rs
src/day_11/: bench.rs  bin.rs  mod.rs
src/day_12/: bench.rs  bin.rs  mod.rs
src/day_13/: bench.rs  bin.rs  mod.rs
src/day_14/: bench.rs  bin.rs  mod.rs
src/day_15/: bench.rs  bin.rs  mod.rs
year_2022/day_01/: Cargo.toml
year_2022/day_01/benches/: bench.rs
year_2022/day_01/src/: bench.rs  lib.rs  main.rs
year_2022/day_02/: Cargo.toml
year_2022/day_02/benches/: bench.rs
year_2022/day_02/src/: bench.rs  lib.rs  main.rs
year_2022/day_03/: Cargo.toml
year_2022/day_03/benches/: bench.rs
year_2022/day_03/src/: bench.rs  lib.rs  main.rs
year_2022/day_04/: Cargo.toml
year_2022/day_04/benches/: bench.rs
year_2022/day_04/src/: bench.rs  lib.rs  main.rs
year_2022/day_05/: Cargo.toml
year_2022/day_05/src/: bench.rs  lib.rs  main.rs
year_2022/day_06/: Cargo.toml
year_2022/day_06/benches/: bench.rs
year_2022/day_06/src/: bench.rs  lib.rs  main.rs
year_2022/day_07/: Cargo.toml
year_2022/day_07/benches/: bench.rs
year_2022/day_07/src/: bench.rs  lib.rs  main.rs
year_2022/day_08/: Cargo.toml
year_2022/day_08/src/: bench.rs  lib.rs  main.rs
year_2022/day_09/: Cargo.toml
year_2022/day_09/benches/: bench.rs
year_2022/day_09/src/: bench.rs  lib.rs  main.rs
year_2022/day_10/: Cargo.toml
year_2022/day_10/benches/: bench.rs
year_2022/day_10/src/: bench.rs  lib.rs  main.rs
year_2022/day_11/: Cargo.toml
year_2022/day_11/src/: bench.rs  lib.rs  main.rs
year_2022/day_12/: Cargo.toml
year_2022/day_12/src/: bench.rs  lib.rs  main.rs
year_2022/day_13/: Cargo.toml
year_2022/day_13/src/: bench.rs  lib.rs  main.rs
year_2022/day_14/: Cargo.toml
year_2022/day_14/src/: bench.rs  lib.rs  main.rs
year_2022/day_15/: Cargo.toml
year_2022/day_15/benches/: bench.rs
year_2022/day_15/src/: bench.rs  lib.rs  main.rs
year_2022/day_16/: Cargo.toml
year_2022/day_16/src/: bench.rs  lib.rs  main.rs
year_2022/day_17/: Cargo.toml
year_2022/day_17/src/: bench.rs  lib.rs  main.rs
year_2022/day_18/: Cargo.toml
year_2022/day_18/src/: bench.rs  lib.rs  main.rs
year_2022/day_19/: Cargo.toml
year_2022/day_19/src/: bench.rs  lib.rs  main.rs
year_2022/day_20/: Cargo.toml
year_2022/day_20/src/: bench.rs  lib.rs  main.rs
year_2022/day_21/: Cargo.toml
year_2022/day_21/src/: bench.rs  lib.rs  main.rs
year_2022/day_22/: Cargo.toml
year_2022/day_22/src/: bench.rs  lib.rs  main.rs
year_2023/day_01/: Cargo.toml
year_2023/day_01/src/: bench.rs  lib.rs  main.rs
year_2023/day_02/: Cargo.toml
year_2023/day_02/src/: bench.rs  lib.rs  main.rs
year_2023/day_03/: Cargo.toml
year_2023/day_03/src/: bench.rs  lib.rs  main.rs
year_2023/day_04/: Cargo.toml
year_2023/day_04/src/: bench.rs  lib.rs  main.rs
year_2023/day_05/: Cargo.toml
year_2023/day_05/src/: bench.rs  lib.rs  main.rs
year_2023/day_06/: Cargo.toml
year_2023/day_06/src/: bench.rs  lib.rs  main.rs
year_2023/day_07/: Cargo.toml
year_2023/day_07/src/: bench.rs  lib.rs  main.rs
year_2023/day_08/: Cargo.toml
year_2023/day_08/src/: bench.rs  lib.rs  main.rs
year_2023/day_09/: Cargo.toml
year_2023/day_09/src/: main.rs
year_2023/day_10/: Cargo.toml
year_2023/day_10/src/: main.rs
year_2023/day_11/: Cargo.toml
year_2023/day_11/src/: main.rs
year_2023/day_12/: Cargo.toml
year_2023/day_12/src/: main.rs
year_2024/day_01/: Cargo.toml
year_2024/day_01/src/: main.rs
