[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4"

[[bin]]
name = "day_01"
path = "src/day_01/bin.rs"

[[bench]]
name = "day_01"
path = "src/day_01/bench.rs"
harness = false

[[bin]]
name = "day_02"
path = "src/day_02/bin.rs"

[[bench]]
name = "day_02"
path = "src/day_02/bench.rs"
harness = false

[[bin]]
name = "day_03"
path = "src/day_03/bin.rs"

[[bench]]
name = "day_03"
path = "src/day_03/bench.rs"
harness = false

[[bin]]
name = "day_04"
path = "src/day_04/bin.rs"

[[bench]]
name = "day_04"
path = "src/day_04/bench.rs"
harness = false
