[package]
name = "year_2022_day_08"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "year_2022_day_08"
path = "src/bench.rs"
harness = false
