[package]
name = "day_11"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "day_11"
path = "src/bench.rs"
harness = false
