[package]
name = "day_15"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
nom.workspace = true
rayon.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false
