[package]
name = "day_16"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
nom.workspace = true
rustc-hash.workspace = true
bitvec.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "day_16"
path = "src/bench.rs"
harness = false
