[package]
name = "day_19"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "day_19"
path = "src/bench.rs"
harness = false
