[package]
name = "year_2023_day_04"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "year_2023_day_04"
path = "src/bench.rs"
harness = false
